# screensavers-flame

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
assets/: local76-flame.desktop  local76-flame.xml  scene-flame.desktop  scene-flame.xml
src/: flame.rs  main.rs  screensaver_shim.rs
src/flame/: mod.rs  physics.rs  types.rs
