[package]
name = "flame"
version = "2026.7.0"
edition = "2021"
description = "flame - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "flame"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", branch = "main", default-features = false, features = ["scenes", "screensaver-runtime", "role-application", "lifecycle-foreground", "platform-native"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-flame"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (flame) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/flame", "usr/libexec/screensaver-shims/flame", "755"],
    ["assets/scene-flame.desktop", "usr/share/applications/scene-flame.desktop", "644"],
    ["assets/scene-flame.xml", "usr/share/xscreensaver/config/scene-flame.xml", "644"]
]

[package.metadata.generate-rpm]
name = "scene-flame"
version = "2026.7.0"
release = "1"
arch = "x86_64"
summary = "flame - retro terminal screensaver effect"
description = "Screensaver effect (flame) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/flame", dest = "/usr/libexec/screensaver-shims/flame", mode = "755" },
    { source = "assets/scene-flame.desktop", dest = "/usr/share/applications/scene-flame.desktop", mode = "644" },
    { source = "assets/scene-flame.xml", dest = "/usr/share/xscreensaver/config/scene-flame.xml", mode = "644" }
]