[package]
name = "flame"
version = "2026.6.10-1"
edition = "2021"
description = "flame - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "flame"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }

[build-dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-flame"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (flame) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/flame", "usr/libexec/local76/screensavers/flame", "755"],
    ["assets/local76-flame.desktop", "usr/share/applications/local76-flame.desktop", "644"],
    ["assets/local76-flame.xml", "usr/share/xscreensaver/config/local76-flame.xml", "644"],
    ["assets/local76-flame.png", "usr/share/pixmaps/local76-flame.png", "644"]
]

[package.metadata.generate-rpm]
name = "scene-flame"
version = "2026.6.10-1"
release = "1"
arch = "x86_64"
summary = "flame - retro terminal screensaver effect"
description = "Screensaver effect (flame) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/flame", dest = "/usr/libexec/local76/screensavers/flame", mode = "755" },
    { source = "assets/local76-flame.desktop", dest = "/usr/share/applications/local76-flame.desktop", mode = "644" },
    { source = "assets/local76-flame.xml", dest = "/usr/share/xscreensaver/config/local76-flame.xml", mode = "644" },
    { source = "assets/local76-flame.png", dest = "/usr/share/pixmaps/local76-flame.png", mode = "644" }
]
[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
